public/sass/main.scss
/* ... */
@mixin ellipsis() { text-overflow: ellipsis; white-space: nowrap; display: block; overflow: hidden; }
@mixin opacity($value) {
  opacity: $value;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" $value * 100 ")";
  filter: alpha(opacity= $value * 100 );
  zoom: 1;
}

@mixin font-size-margin($size) {
  font-size: $size;
  margin-top: $size/2;
  margin-bottom: $size/2;
}

@mixin grid($cols, $last: 0) {
  $gutter: 2% * ($last - 1);
  $column: $columnWidth - $gutter;
  width: ($cols * ($column + $gutter) - $gutter);
  margin-right: $gutter;
  float: left;

  @media (max-width: $responsiveWidth) {
    float: none;
    width: 100%;
  }
}

/*
 * http://html5reset.org + minor modifications
 */
html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video, details, summary { margin: 0; padding: 0; border: 0; font-size: 100%; line-height: 1.6em; vertical-align: baseline; background: transparent; }
article, aside, figure, footer, header, hgroup, nav, section, details, summary { display: block; }
ul { list-style: none; }
a { margin: 0; padding: 0; vertical-align: baseline; background: transparent; }
abbr[title], dfn[title] { border-bottom: 1px dotted #000; cursor: help; }
table { border-collapse: collapse; border-spacing: 0; }
th { font-weight: bold; vertical-align: bottom; }
td { font-weight: normal; vertical-align: top; }
input, select, button { vertical-align: middle; }
select, input, textarea { font-size: $fontSize - 1; }
table { font-size: inherit; font: 100%; }
.clickable, label, input[type=file], button { cursor: pointer; }
button, input, select, textarea { margin: 0; }
button { width: auto; overflow: visible; }
.ie7 img { -ms-interpolation-mode: bicubic; }
.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }
* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
body { background-color: $backgroundColor; font-size: $fontSize; font-family: $fontFamily; -webkit-text-size-adjust: none; }
body, select, input, textarea { color: $fontColor; }
a, a:active { color: $linkColor; }
a:hover { color: darken($linkColor, 20%); }
input:-moz-placeholder { color: lighten($fontColor, 30%); }
textarea:-moz-placeholder { color: lighten($fontColor, 30%); }
li.separator { background: #eee; height: 1px; overflow: hidden; }

/*
 * Footer
 */
html, body { height: 100%; }
div.wrapper {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin-bottom: -$footerHeight;

  div.clear {
    height: $footerHeight + 20;
    clear: both;
  }
}

footer {
  height: $footerHeight;
  width: 100%;
  background: #fff;
  color: #999;
  clear: both;
  padding: 0 ($bodyGutter - 5) 5px;
  overflow: hidden;
  position: fixed;
  bottom: 0;

  form {
    position: relative;
    input { font-family: inherit; font-size: 1.1em; width: 100%; padding: 8px; padding-right: 30px; }
    input.sending { background: url(../image/loader-facebook.gif) no-repeat 99% 50%; }
    input.disabled, input.sending.disabled { background-color: #eee; }
    .menu {
      position: absolute;
      top: 5px;
      right: 4px;
      a { color: #555; font-size: 22px; text-decoration: none; display: block; padding: 4px; }
    }
  }

  @media (max-width: $responsiveWidth) {
    position: static;
  }
}

/*
 * Typographi and base CSS
 */
h1 a, h3 a { text-decoration: none; }
h1 { @include font-size-margin(2em); }
h2 { @include font-size-margin(1.6em); }
h3 { @include font-size-margin(1.2em); }
img { max-width: 100%; }
p { margin: 1em 0; }
ol { margin-left: 2em; }
dl {
  $dtWidth: 220px;
  dt {
    width: $dtWidth;
    float: left;
    clear: left;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  dd { margin-left: $dtWidth + $bodyGutter; }
}
.center { text-align: center; }
.hidden { display: none; }
.row { padding: 0 $bodyGutter; clear: both; }
.close { display: block; float: right; cursor: pointer; font-size: 1.3em; padding: 3px; }

div.question { padding: 0.5em; @include border-radius(3px); }
div.question { background: #def; color: #158; border: 1px solid #bde; }
div.question .button { background: darken(#def, 10%); border: 2px solid darken(#def, 40%); }
div.question .button.confirm { background: darken(#def, 10%); border: 2px solid #900; }

/*
 * Form elements
 */
form {
  margin: 0;
  label { display: block; margin-top: $bodyGutter; }

  select[multi] { height: 30px; }
  input[readonly] { background: #f6f6f6; color: #666; }
  .selectize-input, input, select {
    background: #fff;
    font-size: $fontSize - 1;
    outline: none;
    border: 2px solid #ccc;
    padding: 4px;
    width: 290px;
    @include border-radius(3px);
  }
  .selectize-input { padding: 2px; }
  .selectize-input.focus, input:focus { border: 2px solid darken(#ccc, 15%); }
  input[type="checkbox"] { width: auto; }
  input.field-with-error, select.field-with-error {
    border-color: $errorColor;
  }
  div.actions {
    margin-top: 2em;
    clear: left;
    padding: 0.5em 0;
  }
  p.help {
    color: #555;
    font-size: 0.9em;
    margin-top: 0.1em;
  }
}
/* ... */

